--- a/Hospital Management System/Awebsite/home/templates/signup.html
+++ b/Hospital Management System/Awebsite/home/templates/signup.html
@@ -40,20 +40,20 @@
       </div>
     <div class="col-md-6">
       <label for="validationDefault03" class="form-label">country</label>
-      <input type="text" class="form-control" name="country" id="country" required>
+      <input type="text" class="form-control" name="city" id="city" required>
     </div>
     <div class="col-md-3">
       <label for="validationDefault04" class="form-label">city</label>
-      <select class="form-select" name="city" id="city" required>
+      <select class="form-select" name="state" id="state" required>
         <option selected disabled value="">Choose...</option>
-        <option id="dhaka"> dhaka</option>
-        <option id="rajshahi"> rajshahi</option>
-        <option id="khulna"> khulna</option>
-        <option id="barishal"> barishal</option>
-        <option id="chottogram"> chottogram</option>
-        <option id="sylleht"> sylleht</option>
-        <option id="moymonshing"> moymonshing</option>
-        <option id="others"> others</option>
+        <option> dhaka</option>
+        <option> rajshahi</option>
+        <option> khulna</option>
+        <option> barishal</option>
+        <option> chottogram</option>
+        <option> sylleht</option>
+        <option> moymonshing</option>
+        <option> others</option>
       </select>
     </div>
     <div class="input_forms_gender">
@@ -72,7 +72,7 @@
       </div>
     </div>
     <div class="col-12">
-      <button class="btn btn-primary" id="signupbutton" type="submit">Submit form</button>
+      <button class="btn btn-primary" type="submit">Submit form</button>
     </div>
   </form>
 
