--- a/Hospital Management System/Awebsite/home/templates/contacts.html
+++ b/Hospital Management System/Awebsite/home/templates/contacts.html
@@ -24,7 +24,7 @@
         <input type="number" class="form-control" name="Phone" id="Phone">
       </div>
       <div class="mb-3">
-        <label for="exampleFormControlTextarea1" class="form-label">(Description) Ask any question or give us suggestions to improve</label>
+        <label for="exampleFormControlTextarea1" class="form-label">(Description) ASK  any question or give us suggestions to improve</label>
         <textarea class="form-control" id="Desc" name="Desc" rows="3"></textarea>
       </div>
     <button type="POST" class="btn btn-primary">Submit</button>
