--- a/Hospital Management System/Awebsite/home/templates/logIn.html
+++ b/Hospital Management System/Awebsite/home/templates/logIn.html
@@ -9,7 +9,7 @@
   {% csrf_token %}
     <h1>Log in here.</h1> 
     <div class="mb-3">
-      <label for="exampleInputEmail1" class="form-label">Usernaem</label>
+      <label for="exampleInputEmail1" class="form-label">User Name</label>
       <input type="text" class="form-control" name="loginusername" id="loginusername" aria-describedby="emailHelp">
       <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
     </div>
