--- a/Hospital Management System/Awebsite/home/templates/profile.html
+++ b/Hospital Management System/Awebsite/home/templates/profile.html
@@ -12,7 +12,7 @@
      <h1>Username : {{request.user}}</h1>
      <h1>First name : {{request.user.first_name}}</h1>
      <h1>Last name : {{request.user.last_name}}</h1>
-     <h1>Email : {{request.user.email}}</h1>
+     <h1>Email ID: {{request.user.email}}</h1>
     </div>
     {% endif %}
 
