--- a/Hospital Management System/Awebsite/home/templates/signup.html
+++ b/Hospital Management System/Awebsite/home/templates/signup.html
@@ -8,7 +8,7 @@
   {% csrf_token %}
     <h1>Sign up here.</h1> 
     <div class="col-md-4">
-      <label for="validationDefault01" class="form-label">username</label>
+      <label for="validationDefault01" class="form-label">Username</label>
       <input type="text" class="form-control" name="username" id="username" value="" required>
     </div>
     <div class="col-md-4">
@@ -27,11 +27,11 @@
       </div>
     </div>
     <div class="col-md-4">
-      <label for="validationDefault02" class="form-label">password</label>
+      <label for="validationDefault02" class="form-label">Password</label>
       <input type="text" class="form-control" name="password" id="password" value="" required>
     </div>
     <div class="col-md-4">
-        <label for="validationDefault01" class="form-label">phone number</label>
+        <label for="validationDefault01" class="form-label">Phone number</label>
         <input type="text" class="form-control" name="phone" id="phone" value="" required>
       </div>
       <div class="col-md-4">
