--- a/Awebsite/home/templates/logIn.html
+++ b/Awebsite/home/templates/logIn.html
@@ -17,7 +17,7 @@
       <label for="exampleInputPassword1" class="form-label">Password</label>
       <input type="password" class="form-control" name="loginpassword" id="loginpassword">
     </div>
-    <button type="submit" id="submitbutton" class="btn btn-primary">Submit</button>
+    <button type="submit" class="btn btn-primary">Submit</button>
   </form>
 
 {% endblock body %}
