--- a/Hospital Management System/Awebsite/home/templates/logIn.html
+++ b/Hospital Management System/Awebsite/home/templates/logIn.html
@@ -9,15 +9,15 @@
   {% csrf_token %}
     <h1>Log in here.</h1> 
     <div class="mb-3">
-      <label for="exampleInputEmail1" class="form-label">User Name</label>
+      <label for="exampleInputEmail1" class="form-label">Usernaem </label>
       <input type="text" class="form-control" name="loginusername" id="loginusername" aria-describedby="emailHelp">
       <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
     </div>
     <div class="mb-3">
-      <label for="exampleInputPassword1" class="form-label">Password</label>
+      <label for="exampleInputPassword1" class="form-label">Password </label>
       <input type="password" class="form-control" name="loginpassword" id="loginpassword">
     </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="submit" id="submitbutton" class="btn btn-primary">Submit</button>
   </form>
 
 {% endblock body %}
