--- a/Hospital Management System/Awebsite/home/templates/index.html
+++ b/Hospital Management System/Awebsite/home/templates/index.html
@@ -29,7 +29,7 @@
             <img src="/static/medical.jpg" class="d-block w-100 h-50" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Best care in the world</h5>
-              <p>Some representative Placeholder content for the second slide.</p>
+              <p>Some representative placeholder content for the second slide.</p>
             </div>
           </div>
           <div class="carousel-item">
@@ -82,7 +82,7 @@
                       <button type="button" class="btn btn-sm btn-outline-secondary"><a href="/services">services</a></button>
                       <button type="button" class="btn btn-sm btn-outline-secondary"><a href="/contacts">contact</a></button>
                     </div>
-                    <small class="text-muted">9 Mins</small>
+                    <small class="text-muted">9 mins</small>
                   </div>
                 </div>
               </div>
@@ -91,7 +91,7 @@
               <div class="card shadow-sm">
                 <img src="/static/surgery.jpg" alt="">    
                 <div class="card-body">
-                  <p class="card-text">This is a wider card with Supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
                       <button type="button" class="btn btn-sm btn-outline-secondary"><a href="/services">services</a></button>
