--- a/Hospital Management System/Awebsite/home/templates/signup.html
+++ b/Hospital Management System/Awebsite/home/templates/signup.html
@@ -28,11 +28,11 @@
       </div>
     </div>
     <div class="col-md-4">
-      <label for="validationDefault02" class="form-label">password</label>
+      <label for="validationDefault02" class="form-label">Password</label>
       <input type="text" class="form-control" name="password" id="password" value="" required>
     </div>
     <div class="col-md-4">
-        <label for="validationDefault01" class="form-label">phone number</label>
+        <label for="validationDefault01" class="form-label">Phone number</label>
         <input type="text" class="form-control" name="phone" id="phone" value="" required>
       </div>
       <div class="col-md-4">
@@ -40,7 +40,7 @@
         <input type="text" class="form-control" name="occupation" id="occupation" value="" required>
       </div>
     <div class="col-md-6">
-      <label for="validationDefault03" class="form-label">country</label>
+      <label for="validationDefault03" class="form-label">Country</label>
       <input type="text" class="form-control" name="country" id="country" required>
     </div>
     <div class="col-md-3">
