--- a/Hospital Management System/Awebsite/home/templates/services.html
+++ b/Hospital Management System/Awebsite/home/templates/services.html
@@ -102,7 +102,7 @@
                     <button type="button" class="btn btn-sm btn-outline-secondary"><a href="/services">services</a></button>
                     <button type="button" class="btn btn-sm btn-outline-secondary"><a href="/contacts">contact</a></button>
                   </div>
-                  <small class="text-muted">9 mins</small>
+                  <small class="text-muted">9 Mins</small>
                 </div>
               </div>
             </div>
