--- a/Hospital Management System/Awebsite/home/templates/profile.html
+++ b/Hospital Management System/Awebsite/home/templates/profile.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="/static/index.css">
     <div class="profile_box">
      <h1>Welcome, to your profile <b>{{request.user}}</b></h1>
-     <h1>Username :- {{Request.user}}</h1>
+     <h1>Username :- {{request.user}}</h1>
      <h1>First name :- {{request.user.first_name}}</h1>
-     <h1>Last Name :- {{request.user.last_name}}</h1>
+     <h1>Last name :- {{request.user.last_name}}</h1>
      <h1>Email :- {{request.user.email}}</h1>
     </div>
     {% endif %}
