--- a/Hospital Management System/Awebsite/home/templates/doctors.html
+++ b/Hospital Management System/Awebsite/home/templates/doctors.html
@@ -30,8 +30,8 @@
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary"><a href="/services">Services</a></button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary"><a href="/contacts">Contact</a></button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary"><a href="/services">services</a></button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary"><a href="/contacts">contact</a></button>
                 </div>
                 <small class="text-muted">9 mins</small>
               </div>
