--- a/home/templates/contacts.html
+++ b/home/templates/contacts.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} Contacts {% endblock title %}
+{% block title %} contacts {% endblock title %}
 
 {% block body %} 
 <form class="contact_from mx-5 my-5" method="POST" action="{% url 'contacts' %}">
@@ -24,7 +24,7 @@
         <input type="number" class="form-control" name="Phone" id="Phone">
       </div>
       <div class="mb-3">
-        <label for="exampleFormControlTextarea1" class="form-label">(Description) Ask Any question or give us suggestions to improve</label>
+        <label for="exampleFormControlTextarea1" class="form-label">(Description) ask any question or give us suggestions to improve</label>
         <textarea class="form-control" id="Desc" name="Desc" rows="3"></textarea>
       </div>
     <button type="POST" class="btn btn-primary">Submit</button>
