--- a/home/templates/logIn.html
+++ b/home/templates/logIn.html
@@ -11,7 +11,7 @@
     <div class="mb-3">
       <label for="exampleInputEmail1" class="form-label">Usernaem</label>
       <input type="text" class="form-control" name="loginusername" id="loginusername" aria-describedby="emailHelp">
-      <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+      <div id="emailHelp" class="form-text">We'LL never Share Your Email with anyone else.</div>
     </div>
     <div class="mb-3">
       <label for="exampleInputPassword1" class="form-label">Password</label>
