--- a/home/templates/services.html
+++ b/home/templates/services.html
@@ -5,8 +5,8 @@
 {% block body %} 
 <div class="p-4 p-md-5 mb-4 rounded text-bg-dark my-2">
     <div class="col-md-6 px-0">
-      <h2 class="display-4 fst-italic">Our services are the best in the whole country</h2>
-      <p class="lead my-3">Multiple lines of text that form the lede, informing new readers quickly and efficiently about what’s most interesting in this post’s contents.</p>
+      <h2 class="display-4 fst-italic">Our Services Are the Best in the whole Country</h2>
+      <p class="lead my-3">multiple lines of Text That Form The lede, Informing new readers quickly and efficiently about what’s most interesting in this post’s contents.</p>
       <p class="lead mb-0"><a href="#" class="text-white fw-bold">Continue reading...</a></p>
     </div>
   </div>
